# persona-generation

./: .gitignore  EXTRA_ATTRIBUTES_NOTES.md  README.md  match_cases_to_personas.py  match_profiles_to_blps.py  preprocess_profiles.py  preprocess_profiles_async.py  pyproject.toml  run_batch_training.py  test_optimization_manual.py
data/personas/: East_Harlem_Resident.json  Speaker_1.json
data/transcripts/: -CiPPRiux44.json  01.txt  02.txt  7BTSfVKrBUo.json  Biwu9DPipiA.json  FmthQQHIb0Y.json  Ig7dYhLWPyU.json  KTeY1uG1c_I.json  TyZjc00eCYo.json  f4g4wSYMh_Q.json  kIPPN2YirJk.json  oYFTUIF0TjQ.json  rRsLQv3SeJY.json  vd7-nrTQHj4.json
frontend/: index.html  package-lock.json  package.json
frontend/patches/: vite+7.2.2.patch
frontend/src/: App.tsx  styles.css
medical_case/: __init__.py  cli.py  scenario.py
medical_case/cases/: speaker1_chest_pain.json
persona_agent/: __init__.py  agent.py  cli.py  data_pipeline.py  persona.py
personas/: __init__.py  api.py  blp_extractor.py  blp_extractor_async.py  blp_prompt_optimization.py  case_filter.py  config.py  config.yaml  critique_agent.py  data_loader.py  doctor_critique.py  json_utils.py  judge.py  llm.py  llm_async.py  models.py  patient_profile_builder.py  patient_profile_builder_async.py  prompts.py  prompts.yaml  simulated_doctor.py  simulated_patient_agent.py  simulation_controller.py  train_doctor.py  transcript_anonymizer.py
scripts/: tag_conversation_suitability.py  tag_telehealth_cases.py
tests/: test_patient_pipeline.py
tests/fixtures/: patient_case.json
